manifests/coredns/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-dns
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: dns
              protocol: UDP
            - port: dns-tcp
              protocol: TCP
        - ports:
            - port: metrics
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
  egress:
    # Forward
    - toCIDR:
        - 2001:e42::1/128
        - 2001:e42::2/128
    # Kubernetes
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-dns-egress
spec:
  endpointSelector: {}
  enableDefaultDeny:
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: dns
              protocol: UDP
            - port: dns-tcp
              protocol: TCP
